@@ -52,8 +52,10 @@ function resourceFromBucket (bucket) {
 // @param {AWS.Request} request https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/Request.html
 function instrumentationS3 (orig, origArguments, request, AWS, agent, { version, enabled }) {
   const opName = opNameFromOperation(request.operation)
+  const params = request.params
+  const bucket = params && params.Bucket
+  const resource = resourceFromBucket(bucket)
   let name = 'S3 ' + opName
-  const resource = resourceFromBucket(request.params && request.params.Bucket)
   if (resource) {
     name += ' ' + resource
   }
@@ -63,6 +65,19 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
   const span = ins.createSpan(name, TYPE, SUBTYPE, opName, { exitSpan: true })
   if (!span) {
     return orig.apply(request, origArguments)
+  }
+
+  // As for now OTel spec defines attributes for operations that require a Bucket
+  // if that changes we should review this guard
+  // https://github.com/open-telemetry/opentelemetry-specification/blob/v1.20.0/semantic_conventions/trace/instrumentation/aws-sdk.yml#L435
+  if (bucket) {
+    const otelAttrs = span._getOTelAttributes()
+
+    otelAttrs['aws.s3.bucket'] = bucket
+
+    if (params.Key) {
+      otelAttrs['aws.s3.key'] = params.Key
+    }
   }
 
   const onComplete = function (response) {
